# linux-system-homework

Experiment_1/: 1-1.c  1-2.c  1-3.c  1-4.c  MyCode.c
Experiment_1/make/: Makefile.txt  mysum.c  t.c  type.h
Experiment_1/res/: 实验报告李泽聿-102301237.doc
Experiment_2/: 2-1fifo-client.c  2-1fifo-server.c  2-2msg-receive.c  2-2msg-send.c  2-3shm-read.c  2-3shm-write.c  2-4semshm-.h  2-4semshm-read.c  2-4semshm-write.c  process_communication.c
Experiment_2/res/: 实验报告李泽聿-102301237.doc
Experiment_3/: 3-1tcp-client.c  3-2tcp-client.c  3-2tcp-server.c  3-3fd.c  3-4stream.c  3-5seek.c  3-6archive.c  client.c  server.c
Experiment_3/res/: 实验报告李泽聿-102301237.doc
Experiment_4/: CMakeLists.txt  README.md  client  server
Experiment_4/include/: account.h  communication_config.h
Experiment_4/include/network/: tcp_client.h  tcp_server.h
Experiment_4/res/: 实验报告李泽聿-102301237.doc
Experiment_4/src/: client.cpp  server.cpp
Experiment_4/src/include/: communication_config.h
Experiment_4/src/include/network/: tcp_client.h  tcp_server.h
Experiment_4/src/include/protocols/: PIAP.h  TITP.h
